# sybilcore

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  OBSOLESCENCE_CHECK_20260415.md  README.md  SECURITY.md  UNDEREXPLORED_CORPORA_20260415.md  _CONTEXT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
datasets/agent-trust-benchmark-v1/: README.md  adversarial.parquet  metadata.json  real_world.parquet
docs/: README.md  architecture.md  quickstart.md  research.md  research_agent_threat_landscape.md  research_makishima_problem.md  research_moltbook_integration.md  research_swarm_testing_methodology.md
examples/: basic_scoring.py  langchain_integration.py  openai_wrapper.py  streaming_scorer.py  webhook_alerts.py
experiments/: E1_no_enforcement_simple.md  E1_no_enforcement_technical.md  E2_isolate_flagged_simple.md  E2_isolate_flagged_technical.md  E3_terminate_lethal_simple.md  E3_terminate_lethal_technical.md  E4_predictive_simple.md  E4_predictive_technical.md  E5_governance_therapy_simple.md  E5_governance_therapy_technical.md  SCHEDULED_RUNS.md  T1_100agents_50rounds_simple.md  T1_100agents_50rounds_technical.md  T4_100000agents_20rounds_simple.md  T4_100000agents_20rounds_technical.md  T5_1000000agents_10rounds_simple.md  T5_1000000agents_10rounds_technical.md  ablation_budget_only_5000iter.json  ablation_confound_sweep.json  benign_fp_rate_post_fix.json  calibration_v4_v5_v5_1_comparison.md  calibration_v4_vs_v5_comparison.md  calibration_v5_1_full_moltbook.json  interpretability_proxy_brain_protocol.md  paper_fortify_5fold_cv.json  paper_fortify_bootstrap_ci.json  paper_fortify_counterfactual_stats.json  paper_fortify_cross_corpus.json  paper_fortify_heatmap_data.json  paper_fortify_whitebox_2000.json  phase1_cornell_real_tribe_v2_results.json  phase1_cornell_tribe_v2_results.json  phase1_partial_scores.jsonl  phase1_score_cornell.py  phase23_code_review.md  phase2v2_agentdojo_summary.json  phase3_ablation_summary.md  run_phase1_cornell.py  run_phase1_real_tribe.py  run_phase2_scorer_A.py  (+18 more)
integrations/: __init__.py
integrations/gastown/: CONTRASTIVE_FIX_REPORT.md  INTEGRATIONS_README.md  SCOUT_REPORT.md  X_RESEARCH_BRIEF.md  __init__.py
paper/: main.tex  refs.bib
paper/tables/: stats_table.tex
scripts/: ablation_budget_only.py  ablation_confound_sweep.py  arms_race_smoke.py  build_hf_dataset.py  paper_fortify_combined.py  paper_fortify_heatmap.py  recalibrate_v5_1_full_moltbook.py  recalibrate_v5_real_moltbook.py  run_full_arms_race_v5.sh  run_statistical_tests.py  tournament_seed_sweep.py  tournament_seed_sweep_stats.py
simulation/: whitebox_adaptive.py
sybilcore/: __init__.py
sybilcore-sdk/: README.md  pyproject.toml  setup.py
sybilcore-sdk/sybilcore_sdk/: __init__.py  client.py  exceptions.py  models.py
sybilcore-sdk/sybilcore_sdk/integrations/: __init__.py  anthropic.py  langchain.py  openai.py
sybilcore-sdk/tests/: test_client.py  test_weight_presets.py
sybilcore/analysis/: __init__.py  ablation.py  adversarial_training.py  calibration.py  corpus.py  correlation.py  run_ablation.py  run_adversarial_training.py  run_calibration.py  run_correlation.py  run_v5_ablation.py
sybilcore/api/: openapi.yaml  run_server.py  server.py  service.py
sybilcore/baselines/: __init__.py
sybilcore/brains/: __init__.py  base.py  compromise.py  deception.py  economic.py  fidelity.py  identity.py  neuro.py  (+7 more)
tests/: TRIAGE_REPORT.md  conftest.py  test_models.py
(+161 files in other folders)
