[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sybilcore"
version = "0.1.0"
description = "AI Agent Trust Infrastructure — The Sybil System for autonomous agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "SybilCore Contributors" },
]
keywords = ["ai", "agents", "security", "trust", "monitoring", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3.0"]
crewai = ["crewai>=0.80.0"]
mirofish = ["requests>=2.31.0"]
dashboard = ["jinja2>=3.1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.5.0",
    "mypy>=1.11",
]
all = ["sybilcore[langchain,crewai,mirofish,dashboard,dev]"]

[project.urls]
Homepage = "https://github.com/sybilcore/sybilcore"
Documentation = "https://sybilcore.dev"
Repository = "https://github.com/sybilcore/sybilcore"

[project.scripts]
sybilcore = "sybilcore.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.coverage.run]
source = ["sybilcore"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
