[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sybilcore-sdk"
version = "0.1.0"
description = "Official Python SDK for SybilCore — AI agent trust scoring infrastructure"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "SybilCore", email = "team@sybilcore.com" },
]
keywords = ["ai", "agents", "trust", "safety", "security", "llm", "sybil"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.5",
    "httpx>=0.27",
]

[project.optional-dependencies]
local = ["sybilcore"]
langchain = ["langchain-core>=0.1"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
all = [
    "sybilcore",
    "langchain-core>=0.1",
    "openai>=1.0",
    "anthropic>=0.18",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://sybilcore.com"
Documentation = "https://docs.sybilcore.com"
Repository = "https://github.com/sybilcore/sybilcore"
Issues = "https://github.com/sybilcore/sybilcore/issues"

[tool.setuptools.packages.find]
include = ["sybilcore_sdk*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
